# evolution-master

./: .gitignore  .travis.yml  Cargo.lock-e  Cargo.toml  Dockerfile  README.md  glide.yaml  glide.yaml-e  requirements.txt  requirements.txt-e
bootstrap/: boot.py-e  bootstrap-osx.py  bootstrap-osx.py-e  bootstrap-osx.sh  bootstrap-ubuntu.sh  bootstrap-ubuntu.sh-e
evolution_master/: main.go  main.go-e  main.py  main.py-e
gosrc/: evolution-master.go  evolution-master.go-e  glide.lock-e
src/: evolution-master.go  genepool.go  glide.yaml  main.rs
